# TransferAnalyzer

./: README.md  TransferAnalyzer.ipynb  pyproject.toml
src/transferanalyzer/: __init__.py  frequency_response.py  ir_sr.py  nyquist.py
