[project]
name = "transferanalyzer"
version = "0.1.0"
description = "Analyze dynamic systems by their transfer function."
authors = [
    { name = "Federico Aguzzi", email = "62149513+f-aguzzi@users.noreply.github.com" }
]
dependencies = [
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "mpmath>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/transferanalyzer"]
